<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:minHeight="130dp"
    android:background="@drawable/all_roundbox_white_r10"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_confirmcanceldialog_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/defaultTextColor"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <Button
            android:id="@+id/btn_confirmcanceldialog_confirm"
            android:text="@string/action_confirm"
            android:gravity="center"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textColor="@color/defaultTextColor"

            android:background="@drawable/border_darkgray"
            />
        <Button
            android:id="@+id/btn_confirmcanceldialog_cancel"
            android:text="@string/action_cancel"
            android:gravity="center"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:textColor="@color/defaultTextColor"
            android:background="@drawable/border_darkgray"
            android:layout_weight="0.5"
            />

    </LinearLayout>
    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner_prod_1">

    </com.google.android.gms.ads.AdView>

</LinearLayout>