<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_history_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/tv_history_all_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:background="@color/white"
                        android:text="@string/history_all_selection"
                        android:textColor="@color/pointColor" />


                    <TextView
                        android:id="@+id/tv_history_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/white"

                        android:text="@string/history_selection_delete"
                        android:textColor="@color/darkGray" />

                </RelativeLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"

                    android:layout_marginBottom="50dp"
                    android:nestedScrollingEnabled="false" />

                <TextView
                    android:id="@+id/tv_history_historyempty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/history_no_items"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:textStyle="bold" />

                />

            </FrameLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_gravity="bottom|center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_banner_prod_4">

    </com.google.android.gms.ads.AdView>

    <Button
        android:id="@+id/btn_history_write"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/pointColor"
        android:gravity="center"
        android:text="@string/action_write"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</FrameLayout>